MET-7203 add dc:coverage and update 17th century pattern (#20)
* MET-7203 add dc:coverage and update 17th century pattern

* MET-7203 add dc:coverage and dc:date case

* MET-7203 correct the non capturing group

* MET-7203 remove duplicated test case

* MET-7203 renamed variable and updated century regex

* MET-7203 revert to original test file